--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "einops>=0.8.1",
     "h5py>=3.14.0",
     "imageio>=2.37.0",
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.10.3",
     "numpy>=2.2.6",
     "pandas>=2.3.0",
     "pyyaml>=6.0.2",
