--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pandas>=2.3.0",
     "pyyaml>=6.0.2",
     "requests>=2.32.4",
+    "scipy>=1.15.3",
     "tensorboard>=2.19.0",
     "tensorboard-plugin-profile>=2.20.1",
     "torch>=2.7.1",
