--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "tensorboard>=2.19.0",
     "tensorboard-plugin-profile>=2.20.1",
     "torch>=2.7.1",
+    "torchmetrics>=1.7.3",
     "torchvision>=0.22.1",
     "tqdm>=4.67.1",
 ]
