--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,21 +1,20 @@
 # Training configuration
 model:
   name: "METER"
-  variant: "s"  # xxs, xs, s
+  variant: "xxs"  # xxs, xs, s
 
 training:
   batch_size: 32
   learning_rate: 0.001
   num_epochs: 60
   log_step_loss: True
-  lambda: 1 # selecitivty factor
+  lambda: 10 # selecitivty factor
   n_of_bins: 10 # bins for selectivity
   layers: ["MV2Block", "MobileViTBlock"] # layer classes to assign selectivity to
 
 
 data:
-  root: "/mnt/data/nyu/nyu_data/data"
-  split_files_folder: "./data_splits"
+  root: "data/nyu_data/data"
   train_val_split: [0.9, 0.1]
   num_workers: 8
   shuffle: true
