--- a/configs/exp2.yaml
+++ b/configs/exp2.yaml
@@ -1,3 +1,7 @@
+# Notes
+# Loading with Mo
+#
+
 # Training configuration
 model:
   name: "METER"
@@ -8,13 +12,13 @@ training:
   learning_rate: 0.001
   num_epochs: 60
   log_step_loss: True
-  lambda: 10 # selecitivty factor
-  n_of_bins: 10 # bins for selectivity
   selectivity: true
-
+  lambda: 10 # selecitivty factor, about 1% of max depth
+  n_of_bins: 64 # bins for selectivity
 
 data:
   root: "data/nyu_data/data"
+  split_files_folder: "./data_splits"
   train_val_split: [0.9, 0.1]
   num_workers: 8
   shuffle: true
@@ -24,8 +28,8 @@ device:
   device_id: 0
 
 logging:
-  experiment_name: 'exp_name'
-  log_interval: 0
-  save_interval: 5
+  log_interval: 0 # steps -- 0 for no log
+  save_interval: 5 # epochs
+  experiment_name: 'exp2'
   checkpoint_dir: "./checkpoints"
   log_dir: "./logs"
